css/values.css
/*
===================================
===================================
Styles for an individual page

- Rename this file to match the page you are working on (e.g. home.css, about.css, etc.)
- Create a new file for your page and link this file to it in the <head> of your HTML document
- Variables from global.css will work in this CSS file as well. Do not add any variables to this file.
===================================
===================================
*/

/* need to add wrapper */
/* red background for bottom section needs fixing */
/* some text changes from white to black when in desktop mode */
/* blue background for support us needs fixing */
/* heart color and gap needed for support us */
/* white icons in support us need flexbox to move side by side in desktop mode */
/* align title text to center somehow hoping wrapper fixes some stuff */
html {
	/* does this need before and after */
	box-sizing: border-box;
}

/* 
===================================
Page Component Styles (icon grid, team member card)
===================================
*/
.hero {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.hero img {
	width: 100%;
}
.values-card {
	min-height: 204px;
	color: var(--color-white);
	border: none;
	border-radius: 10px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: center;
	/* margin: 0px 20px; */
}
.values-card h4 {
	margin: 20px 0px 0px 0px;
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
}
.values-card p {
	display: flex;
	text-align: left;
	font-size: var(--font16);
	font-weight: var(--font-weight-regular);
	line-height: var(--line-height20);
	margin: var(--spacing20);
}
/* Turns Our Values Title Black */
.values-head {
	display: flex;
	flex-direction: column;
	text-align: center;
	margin-bottom: 100px;
}

.h3-black {
	color: var(--color-onyx);
	margin: 60px 0 20px 0;
}

.values-head p {
	color: var(--color-onyx);
	margin: 0 20px 0;
}
/* Adds a background color in lieu of those rectangle shapes */
.copperback {
	background-color: var(--color-copper);
	display: flex;
	flex-direction: column;
	text-align: center;
}

/* Adds a background color in lieu of those rectangle shapes */

.onyxback {
	background-color: var(--color-onyx);
}

/* Adds a background color in lieu of those rectangle shapes */

.amaraback {
	background-color: var(--color-amaranth);
}

/* Adds a background color in lieu of those rectangle shapes */

.grapeback {
	background-color: var(--color-cybergrape);
}
/* Adds a background color in lieu of those rectangle shapes */

.blueback {
	background-color: var(--color-yaleblue);
}
/* Adds a background color in lieu of those rectangle shapes */

.tealback {
	background-color: var(--color-teal);
}
/* Adds a background color in lieu of those rectangle shapes */

.support {
	background-color: var(--color-yaleblue);
	margin-top: 90px;
}
.support-header,
.support-text {
	margin: 0px 0px 0px 20px;
}
.support-header {
	display: flex;
	flex-direction: row;
	justify-content: left;
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
}
/* Turns We Support to Red */
/* inline block allows the alignment with heart icon but doesn't fill desktop */
.support-header h4,
.support-header svg {
	margin: 90px 0px 20px 0px;
	color: var(--color-amaranth);
}
.support-text h4 {
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
	margin: 0;
}
.support-text p {
	font-size: var(--font21);
	font-weight: var(--font-weight-regular);
	line-height: var(--line-height26);
	margin: 20px 0px 0px 0px;
}
.support-logo-01 {
	margin: 40px 0px 20px;
}
.support-logos {
	padding-bottom: 80px;
}
.empowering-text {
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: center;
	margin-top: 60px;
}

/* Turns Title and Paragraph to Black */
.empowering h4 {
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
	color: var(--color-onyx);
	margin: 0;
}
.empowering p {
	text-align: left;
	color: var(--color-onyx);
	padding: 0px var(--spacing20);
	margin-bottom: 60px;
}
/* Adds Red Block behind this img - this changes in desktop version somehow */
.empowering-img-block {
	display: flex;
	flex-direction: column;
	justify-content: center;
	background-color: var(--color-amaranth);
}
.empowering-img-block img {
	margin: 30px;
}

/* ===================================
Section Styles (background, padding, etc.)
===================================
*/

/* 
===================================
Media Queries (overriding styles for different screen sizes)

Note: Here we are using a mobile-first approach, so we start with the smallest screen size and work our way up.
Start by writing styles for the mobile version of the design on the lines above.
Anything that needs to change for larger screens should be added to the media queries below.

Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Tablet and Larger */
@media screen and (min-width: 768px) {
	/* Add styles that apply to table and desktop */
}

/* Tablet Only */
@media screen and (min-width: 768px) and (max-width: 1024px) {
	/* Add styles that only apply to tablet. These are usually fixes to get responsiveness right */
}

/* Desktop Only */
@media screen and (min-width: 1024px) {
	/* Add styles that apply specifically to desktop */

	/* adjusting font sizes and styling for p tags */

	/* Values header and p needs to be on top of the hero */
	.desktop-parent {
		display: flex;
		flex-direction: column;
		gap: 20px;
	}
	.values-main {
		display: flex;
		position: absolute;
		left: 50%;
		top: 45%;
	}

	/* Cards need to change from column to row with some stylized sizing and padding*/
	.desktop-group {
		display: flex;
		flex-direction: row;
		height: 290px;
		gap: 20px;
		padding: 0 200px 0 200px;
	}
	/* Changing values card imgs to background imgs */
	.values-card img {
		display: none;
	}
	/* Individual card widths */
	/* copper and grape 40% */
	.copperback,
	.grapeback {
		width: 40%;
	}
	/* onyx and amaranth 60%*/
	.onyxback,
	.amaraback {
		width: 60%;
	}
	/* blue and teal 50%*/
	.blueback,
	.tealback {
		width: 50%;
	}
	.onyxback {
		background-image: linear-gradient(
				269deg,
				#0e0e0e 46.26%,
				rgba(27, 27, 27, 0) 99.04%
			),
			url(../assets/images/pages/values/sustainability.jpg);
	}

	.amaraback {
		background-image: linear-gradient(
				88deg,
				#b91515 47.26%,
				rgba(185, 21, 21, 0.73) 55.57%,
				rgba(119, 45, 45, 0.4) 68.47%
			),
			url(../assets/images/pages/values/authenticity.jpg);
	}

	.blueback {
		background-image: linear-gradient(
				90deg,
				#184f85 63.23%,
				rgba(24, 79, 133, 0) 83.39%
			),
			url(../assets/images/pages/values/education.jpg);
	}

	.tealback {
		background-image: linear-gradient(
				280deg,
				#007a80 67.16%,
				rgba(0, 122, 128, 0) 80.36%
			),
			url(../assets/images/pages/values/techinnovation.jpg);
	}

	.onyxback,
	.amaraback,
	.blueback,
	.tealback {
		background-repeat: no-repeat;
		background-size: cover;
	}
	/* imgs need to change from -m to normal desktop size */
	/* Imgs, gradients, background colors */

	/* We Support - new padding */
	.support {
		padding-left: 100px;
	}
	/* We Support logos flex row */
	.support-logos {
		display: flex;
		gap: 40px;
	}
	/* Empowerment section needs to collapse with text on the right side of left side img */
	/* Empowerment red background needs to change size and position on X-Y */

	/* All Text white except Empowerment section and We Support Header */
	.h3-black {
		color: var(--color-white);
	}
	.values-head p {
		color: var(--color-white);
	}
	p {
		color: var(--color-white);
	}

	/* Gradients */
	.hero {
		width: 100vw;
		height: 100vh;
		background-image: linear-gradient(
				260deg,
				rgba(9, 9, 9, 0.8) 46.9%,
				rgba(9, 9, 9, 0) 86.82%
			),
			url(../assets/images/pages/values/hero-values.jpg);
		background-position: center center;
		background-size: cover;
		background-repeat: no-repeat;
		position: relative;
	}
	.hero img {
		display: none;
	}
}
/* .sustainability-img{
	background-image: linear-gradient(269deg, #0E0E0E 46.26%, rgba(27, 27, 27, 0.00) 99.04%), url(../assets/images/pages/values/mobile/sustainability-m.jpg);
} */

